--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>JAVASCRIPT CALCULATOR</h1>
 </header>
 
-<section id="display">
-    <span>0</span>
+<section id="screen">
+    <span id="display">0</span>
 </section>
 <section id="calc">
     <button class="number" id="1"><p>1</p></button>
@@ -23,10 +23,10 @@
     <button class="number" id="8"><p>8</p></button>
     <button class="number" id="9"><p>9</p></button>
     <button class="number" id="0"><p>0</p></button>
-    <button id="plus"><p>+</p></button>
-    <button id="minus"><p>-</p></button>
-    <button id="multiply"><p>x</p></button>
-    <button id="divide"><p>/</p></button>
+    <button class="calculations" id="plus"><p>+</p></button>
+    <button class="calculations" id="minus"><p>-</p></button>
+    <button class="calculations" id="multiply"><p>x</p></button>
+    <button class="calculations" id="divide"><p>/</p></button>
 </section>    
 
 <script src="script.js"></script>
