Added clear button, basic addition

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -27,6 +26,8 @@
     <button class="calculations" id="minus"><p>-</p></button>
     <button class="calculations" id="multiply"><p>x</p></button>
     <button class="calculations" id="divide"><p>/</p></button>
+    <button class="calculations" id="equals"><p>=</p></button>
+    <button class="calculations" id="clear"><p>CLEAR</p></button>
 </section>    
 
 <script src="script.js"></script>
