Improved CSS, calc font, fixed number click bug

--- a/index.html
+++ b/index.html
@@ -5,31 +5,33 @@
 
 <body>
 <header>
-    <h1>JAVASCRIPT CALCULATOR</h1>
+    <h1>JOKO'S JAVASCRIPT CALCULATOR</h1>
 </header>
 
-<section id="screen">
+
+<section id="calculator">
+   <section id="screen">
     <span id="display">0</span>
 </section>
 <section id="calc">
-    <button class="number" id="1"><p>1</p></button>
-    <button class="number" id="2"><p>2</p></button>
-    <button class="number" id="3"><p>3</p></button>
-    <button class="number" id="4"><p>4</p></button>
-    <button class="number" id="5"><p>5</p></button>
-    <button class="number" id="6"><p>6</p></button>
-    <button class="number" id="7"><p>7</p></button>
-    <button class="number" id="8"><p>8</p></button>
-    <button class="number" id="9"><p>9</p></button>
-    <button class="number" id="0"><p>0</p></button>
-    <button class="calculations" id="plus"><p>+</p></button>
-    <button class="calculations" id="minus"><p>-</p></button>
-    <button class="calculations" id="multiply"><p>x</p></button>
-    <button class="calculations" id="divide"><p>/</p></button>
-    <button class="calculations" id="equals"><p>=</p></button>
-    <button class="calculations" id="clear"><p>CLEAR</p></button>
+    <button class="number" id="1">1</button>
+    <button class="number" id="2">2</button>
+    <button class="number" id="3">3</button>
+    <button class="number" id="4">4</button>
+    <button class="number" id="5">5</button>
+    <button class="number" id="6">6</button>
+    <button class="number" id="7">7</button>
+    <button class="number" id="8">8</button>
+    <button class="number" id="9">9</button>
+    <button class="number" id="0">0</button>
+    <button class="calculations" id="plus"> + </button>
+    <button class="calculations" id="minus"> - </button>
+    <button class="calculations" id="multiply"> x </button>
+    <button class="calculations" id="divide"> / </button>
+    <button class="calculations" id="equals"> = </button>
+    <button class="calculations" id="clear"> CLEAR </button>
 </section>    
-
+</section>
 <script src="script.js"></script>
 </body>
 
