--- a/index.html
+++ b/index.html
@@ -13,24 +13,29 @@
    <section id="screen">
     <span id="display">0</span>
 </section>
-<section id="calc">
-    <button class="number" id="1">1</button>
-    <button class="number" id="2">2</button>
-    <button class="number" id="3">3</button>
-    <button class="number" id="4">4</button>
-    <button class="number" id="5">5</button>
-    <button class="number" id="6">6</button>
+<div id="calc">
+   <div id="numbers">
     <button class="number" id="7">7</button>
     <button class="number" id="8">8</button>
     <button class="number" id="9">9</button>
+    <button class="number" id="4">4</button>
+    <button class="number" id="5">5</button>
+    <button class="number" id="6">6</button>
+    <button class="number" id="1">1</button>
+    <button class="number" id="2">2</button>
+    <button class="number" id="3">3</button>
     <button class="number" id="0">0</button>
+    <button id=".">.</button>
+    <button class="calculations" id="equals"> = </button>
+    </div>
+    <div id="calccolumn">
     <button class="calculations" id="plus"> + </button>
     <button class="calculations" id="minus"> - </button>
     <button class="calculations" id="multiply"> x </button>
     <button class="calculations" id="divide"> / </button>
-    <button class="calculations" id="equals"> = </button>
     <button class="calculations" id="clear"> CLEAR </button>
-</section>    
+    </div>
+</div>    
 </section>
 <script src="script.js"></script>
 </body>
