--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <button class="number" id="3">3</button>
     <button class="number" id="0">0</button>
     <button id=".">.</button>
-    <button class="calculations" id="equals"> = </button>
+    <button id="equals"> = </button>
     </div>
     <div id="calccolumn">
     <button class="calculations" id="plus"> + </button>
