Updated markdown, added reset after calculation, finalised CSS

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="icon" href="http://icons.iconarchive.com/icons/paomedia/small-n-flat/64/calculator-icon.png">
 </head>
 
 <body>
@@ -25,7 +26,7 @@
     <button class="number" id="2">2</button>
     <button class="number" id="3">3</button>
     <button class="number" id="0">0</button>
-    <button id=".">.</button>
+    <button id="decimal">.</button>
     <button id="equals"> = </button>
     </div>
     <div id="calccolumn">
@@ -33,7 +34,7 @@
     <button class="calculations" id="minus"> - </button>
     <button class="calculations" id="multiply"> x </button>
     <button class="calculations" id="divide"> / </button>
-    <button class="calculations" id="clear"> CLEAR </button>
+    <button class="calculations" id="clear"> AC </button>
     </div>
 </div>    
 </section>
